--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ defaults:
     values:
       layout: "post"
 
+
 projects:
   sort_by: pushed
   # sort_by options:
@@ -24,7 +25,7 @@ projects:
   limit: 9
   exclude:
     archived: false
-    forks: true
+    forks: false
     projects:
     # - repo-name
 
@@ -43,7 +44,7 @@ projects:
   # twitter: your_username
   # unsplash: your_username
   # vk: your_username
-  # website: http://your_website_url
+  # website: http://claycurry.com
   # youtube: your_username
 
 topics:
